--- a/roles/backoffice/nautobot/templates/nautobot_config.py.j2
+++ b/roles/backoffice/nautobot/templates/nautobot_config.py.j2
@@ -27,7 +27,7 @@ DATABASES = {
         "PORT": os.getenv("NAUTOBOT_DB_PORT", ""),  # Database port (leave blank for default)
         "CONN_MAX_AGE": int(os.getenv("NAUTOBOT_DB_TIMEOUT", 300)),  # Database timeout
         "ENGINE": os.getenv(
-            "NAUTOBOT_DB_ENGINE", "django.db.backends.mysql"
+            "NAUTOBOT_DB_ENGINE", "django.db.backends.postgresql"
         ),  # Database driver ("mysql" or "postgresql")
        "OPTIONS": {"charset": "utf8mb4"},  # For MySQL unicode emoji support, uncomment this line
     }
